update html and css

--- a/2-5.css
+++ b/2-5.css
@@ -907,3 +907,12 @@ h1 {
     font-size: 14px;
     font-weight: 400;
 }
+
+
+#s_div {
+    color: #181D27;
+    font-size: 20px;
+    font-weight: 700;
+    max-width: 286px;
+    width: 100%;
+}
